add VRT output to saveStack
Fix lines falling between the cracks in extract (calling rasterzeLines): https://stat.ethz.ch/pipermail/r-sig-geo/2014-May/020973.html
Better handling of NA values in 1 byte raster files


--- current version
fixed the link for GADM countries download. Bug reported by Loic Dutrieux

--- 16-Oct-2018, version: 2.7-15
faster extraction for points via GDAL
faster rasterization of polygons

Bug fixes:
buffer did not work with values in memory. Bug reported and solution proposed by Carlos Alberto Arnillas
extract with point and smaller single cell buffer failed when an aggregation function was provided. Reported by Lucas
https://stackoverflow.com/questions/52335522/r-why-does-raster-extract-give-dim-error/52338639#52338639
 

--- 11-Nov-2017, version: 2.6-6
New:
new extent objects created from a vector of coordinates are now checked for being valid. Suggested by Mike Sumner
buffer for lon/lat points
erase for SpatialLines with Polygons
kernelDensity function (hidden)
output from freq is always ordered (whether computed from disk or from in memory values). Requested by Benjamin Leutner

Bug fixes:
as.data.frame from file based rasters ingored na.rm=TRUE (unless xy=TRUE). Reported by Jean-Gabriel Elie
getValuesBlock with lyrs argument. Reported by Antoine Stevens
In approxNA with large files NAs were ignored and the NArule was ignored. Reported by Pablo Timoner
isValid(raster()) failed. Reported by dww on http://stackoverflow.com/questions/37869271/how-to-dput-a-raster/37871930
zapply passes on ... arguments to stackApply
res() for rotated rasters was wrong https://gis.stackexchange.com/questions/259321/opening-rotated-raster-in-r (fix suggested by Spacedman)
cover with RasterStackBrick objects could not write to file (reported by L. Wasser https://stackoverflow.com/questions/44295842/r-raster-cover-function-error-with-landsat-stacks 