@@ -36,6 +36,13 @@ Matrix with 6, (5 SpatialLines), or 3 (SpatialPoints) columns. object (sequentia
 if (require(rgdal) & require(rgeos)) {
 	p <- shapefile(system.file("external/lux.shp", package="raster"))
 	x <- geom(p)
+	head(x)
+	
+# and back to a SpatialPolygonsDataFrame	
+	x <- data.frame(x)
+	sp <- as(x, "SpatialPolygons")
+	crs(sp) <- crs(p)
+	spdf <- SpatialPolygonsDataFrame(sp, data.frame(p), match.ID=FALSE)
 }
 }
 
